--- a/Konferencije/src/java/config/labels_en.properties
+++ b/Konferencije/src/java/config/labels_en.properties
@@ -44,7 +44,7 @@ menu_start_label=Start
 menu_search_label=Search
 menu_logout_label=Logout
 menu_messages_label=Messages
-menu_my_agenda_label=My Agenda
+menu_my_conferences_label=My Conferences
 
 
 need_username_message=You need to enter the username
